<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f2f6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="Log in will be available on: "
        android:textColor="#3d3d3d"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_label_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="0 "
        android:visibility="gone"
        android:textColor="#3d3d3d"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintStart_toEndOf="@+id/tv_label" />

    <EditText
        android:id="@+id/edt_login_uname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edittext_bg"
        android:drawableEnd="@drawable/ic_baseline_person_outline_24"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10sp"
        android:shadowColor="#2f3542"
        android:shadowDx="2"
        android:shadowDy="4"
        android:textColor="#4b4b4b"
        android:textColorHint="#4b4b4b"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_brgy" />

    <EditText
        android:id="@+id/edt_login_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edittext_bg"
        android:drawableEnd="@drawable/ic_lock_black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:shadowColor="#2f3542"
        android:shadowDx="2"
        android:shadowDy="4"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:password="true"
        android:textColor="#4b4b4b"
        android:textSize="15sp"
        android:textColorHint="#4b4b4b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_login_uname" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_bg"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/tv_label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/don_t_have_an_account_yet"
        android:textColor="#3d3d3d"
        app:layout_constraintEnd_toStartOf="@+id/tv_clckble_signin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_clckble_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="92dp"
        android:text="@string/signup"
        android:textColor="#ff9f1a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_brgy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/BRGY"

        android:textColor="#ff9f1a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headeremergency" />

    <TextView
        android:id="@+id/tv_login_forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"

        android:text="@string/forgot_password"
        android:textColor="#3d3d3d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_login_pass" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="28dp"
        android:layout_height="18dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_forgotpass" />

    <RelativeLayout
        android:id="@+id/headeremergency"
        android:layout_width="match_parent"
        android:layout_height="282dp"
        android:background="@drawable/header_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/IV_login"
            android:layout_width="219dp"
            android:layout_height="230dp"

            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/brgylogob" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="serif-monospace"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>