<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f6fa"
    tools:context=".forgotpass">

    <RelativeLayout
        android:id="@+id/header_FORGOT"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/header_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/boldgogh"
            android:text="@string/forgot_password1"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_forgot_cancel"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_round_cancel"
            android:text="@string/x__" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_forgot_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/btn_bg"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="314dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:fontFamily="serif"
        android:text="@string/sent"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="Fill the informations needed:"
        android:textColor="#2c3e50"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_FORGOT" />

    <EditText
        android:id="@+id/edt_email_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#dcdde1"
        android:drawableEnd="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        android:paddingStart="20sp"
        android:paddingEnd="10sp"
        android:textColor="@color/black"
        android:textColorHint="#c23616"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_forgot_uname" />

    <EditText
        android:id="@+id/edt_forgot_uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#dcdde1"
        android:drawableEnd="@drawable/ic_baseline_person_outline_24"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="20sp"
        android:paddingEnd="10sp"
        android:textColor="@color/black"
        android:textColorHint="#c23616"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>